--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <h2>Find My Work in below links</h2>
   <ul>
-    <li><a href="https://chowl.spaidyweb.com/home.html" target="_blank">https://chowl.spaidyweb.com/home.html</a></li>
+    <li><a href="https://khandesh.spaidyweb.com/home.html" target="_blank">https://khandesh.spaidyweb.com/home.html</a></li>
     <li><a href="http://stackpilot.webflow.io/" target="_blank">http://stackpilot.webflow.io/</a></li>
     <li><a href="http://personacraft.webflow.io/" target="_blank">http://personacraft.webflow.io/</a></li>
     <li><a href="https://shorturl.at/jc9zt" target="_blank">https://shorturl.at/jc9zt</a></li>
